@@ -7,7 +7,7 @@ requires "JSON::Validator"                   => "0.84";
 requires "Mojo::IOLoop::ForkCall"            => "0.17";
 requires "Mojo::IRC"                         => "0.35";
 requires "Mojolicious"                       => "7.00";
-requires "Mojolicious::Plugin::AssetPack"    => "1.20";
+requires "Mojolicious::Plugin::AssetPack"    => "1.24";
 requires "Mojolicious::Plugin::LinkEmbedder" => "0.2301";
 requires "Mojolicious::Plugin::OpenAPI"      => "0.14";
 requires "Parse::IRC"                        => "1.20";
